dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_LANG(C)
AC_CONFIG_SRCDIR([hatimerun.c])
AM_INIT_AUTOMAKE(hatools, "2.13")
AC_SUBST(DATE, "2010-03-09")
AC_CONFIG_HEADERS([config.h])

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_AWK
AC_PROG_LN_S

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strerror)
AC_CHECK_FUNCS(setenv)
# solaris requires explicit -lposix4 for nanosleep
AC_CHECK_LIB(posix4, nanosleep, [AC_SUBST(MAYBE_LIBPOSIX4, "-lposix4")] )

./mk_siglist.sh
AC_CHECK_FUNCS(sys_signame, ,
AC_MSG_CHECKING([output of \"kill -l\" for signallist])
AC_TRY_COMPILE([#include "sys_signame.h"], [], 
	AC_MSG_RESULT(ok)
	AC_DEFINE(HATOOLS_SYS_SIGNAME_H, [1], [HAVE_SYS_SIGNAME]),
	AC_MSG_RESULT(fail)
	AC_MSG_WARN([Using Standard POSIX signals as fallback])
	AC_MSG_CHECKING([for POSIX signals])
	AC_TRY_COMPILE([#include "sys_signame_posix.h"], [],
		AC_MSG_RESULT(ok),
		AC_MSG_RESULT(fail)
		AC_MSG_ERROR([OOPS! You platform even has problems with the POSIX signals])
		AC_MSG_ERROR([You can still edit sys_signame.h by manual])
	)	
)
)
AC_OUTPUT(Makefile halockrun.1 hatimerun.1)
